--- a/sobreMí.html
+++ b/sobreMí.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <a class="navbar-brand text-muted" href="inicio.html">Inicio</a>
+        <a class="navbar-brand text-muted" href="index.html">Inicio</a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation"></button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
