--- a/misProyectos.html
+++ b/misProyectos.html
@@ -69,14 +69,13 @@
     <div class="container py-4">
         <div class="row gy-4 gx-5 w-100">
             <div class="col-lg-4 col-md-6">
-                <h5 class="h1 text-white">¡Contactáctame!</h5>
+                <h5 class="h1 text-white">¡Contáctame!</h5>
                 <p class="small text-muted">Si tienes alguna duda puedes escribirme por cualquiera de estos medios:</p>
             </div>
             <div class="col-lg-2 col-md-6">
                 <h5 class="text-white mb-3">Contactos:</h5>
                 <ul class="list-unstyled text-muted">
-                    <li><a href="mailto:laureanoguerrerovega2003@gmail.com?Subject=Quiero%20contactarme
-                        %20contigo."><i class="bi bi-envelope-at"></i></a></li>
+                    <li><a href="mailto:laureanoguerrerovega2003@gmail.com?Subject=Quiero%20contactarme%20contigo."><i class="bi bi-envelope-at"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/laureano-guerrero-vega-a7b079251"><i class="bi bi-linkedin"></i></a></li>
                     <li><a href="tel:+506 61069752"><i class="bi bi-telephone-inbound"></i></a></li>
                 </ul>
@@ -84,8 +83,7 @@
             <div class="col-lg-2 col-md-6 ">
                 <h5 class="text-white mb-3">-</h5>
                 <ul class="list-unstyled text-muted">
-                    <li><a href="mailto:laureanoguerrerovega2003@gmail.com?Subject=Quiero%20contactarme
-                        %20contigo.">laureanoguerrerovega2003@gmail.com</a></li>
+                    <li><a href="mailto:laureanoguerrerovega2003@gmail.com?Subject=Quiero%20contactarme%20contigo.">laureanoguerrerovega2003@gmail.com</a></li>
                     <li><a href="https://www.linkedin.com/in/laureano-guerrero-vega-a7b079251">Laureano Guerrero</a></li>
                     <li><a href="tel:+506 61069752">6106-9752</a></li>
                 </ul>
