correción de escritura
error de escritura

--- a/sobreMí.html
+++ b/sobreMí.html
@@ -59,7 +59,7 @@
                 <div class="text-center p-2">
                     <p>Soy un estudiante apasionado de la programación, informática y las organizaciones
                         que recientemente completó su carrera universitaria
-                        con ganas de seguir aprendiendo he incursionando en nuevas áreas como
+                        con ganas de seguir aprendiendo e incursionando en nuevas áreas como
                         lo es el mercado laboral, entusiasmado de siempre dar la mayor de mis 
                         capacidades.
                     </p>
